# gclient2nix

./: pyproject.toml  readme.md
docs/: cache.txt
docs/examples/courgette/: cache.txt  gclient2nix.sh  sources.json
docs/examples/pdfium/: cache.txt  gclient2nix.sh  info.json  run.sh  sources.json
src/gclient2nix/: __main__.py  gclient2nix.py
src/gclient2nix/depot_tools/: gclient_eval.py  gclient_utils.py
